--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="PairLedger" />
+    <meta name="theme-color" content="#f0f9ff" media="(prefers-color-scheme: light)" />
+    <meta name="theme-color" content="#0a1520" media="(prefers-color-scheme: dark)" />
     <title>PairLedger</title>
-    <style>body { background: #030712; }</style>
   </head>
   <body>
     <div id="root"></div>
